--- a/estilos/index.css
+++ b/estilos/index.css
@@ -32,6 +32,12 @@
 body
 {
     background-color: var(--cor1);
+    overflow: hidden;
+
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 /*  HEADER  */
