--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,1 +1,28 @@
 @charset "UTF-8";
+
+@media only screen and (max-width: 375px)
+{
+    header > p
+    {
+        top: 100px;
+        font-size: 32px;
+    }
+    #container-midia-main
+    {
+        margin-block: 20px;
+    }
+    #container-informacoes
+    {
+        font-size: 18px;
+    }
+    #container-botoes
+    {
+        margin-top: 40px;
+    }
+    .botoes
+    {
+        width: 100px;
+        height: 40px;
+        font-size: 16px;
+    }  
+}
