--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -2,6 +2,10 @@
 
 @media only screen and (min-width: 375px)
 {
+    #folha2
+    {
+        right: -30px;
+    }
     header > p
     {
         top: 100px;
@@ -11,20 +15,35 @@
     {
         margin-block: 20px;
     }
+    main img
+    {
+        width: 300px;
+        height: 240px;
+    }
     #container-informacoes
     {
         font-size: 18px;
     }
     #container-botoes
     {
-        margin-top: 40px;
+        padding-block: 0px;
+        margin-top: 20px;
     }
     .botoes
     {
         width: 100px;
         height: 40px;
         font-size: 16px;
-    }  
+    }
+    #pincelada-footer
+    {
+        left: 30px;
+    }
+    #folha1
+    {
+        right: 20px;
+        bottom: 10px;
+    }
 }
 
 @media only screen and (min-width: 600px)
@@ -32,6 +51,12 @@
     #folha2
     {
         left: 50px;
+        bottom: 100px;
+        width: 380px;
+    }
+    #pincelada-header
+    {
+        width: 380px;
     }
     header > p
     {
@@ -44,13 +69,12 @@
     }
     #container-midia-main p
     {
-        font-size: 45px;
+        font-size: 58px;
     }
     #container-informacoes
     {
         font-size: 20px;
-        padding-block: 0px;
-        padding-bottom: 20px;
+        padding-block: 30px;
     }
     .botoes
     {
@@ -60,8 +84,14 @@
     }
     #pincelada-footer
     {
-        right: -80px;
-        bottom: 180px;
+        left: 70px;
+        bottom: 190px;
+        width: 350px;
+    }
+    #folha1
+    {
+        right: 50px;
+        width: 380px;
     }
 }
 
@@ -72,15 +102,34 @@
         bottom: 40px;
         right: 15px;
     }
+    header > p
+    {
+        font-size: 42px;
+    }
     #container-midia-main p
     {
-        font-size: 48px;
+        font-size: 62px;
+    }
+    #container-midia-main > img
+    {
+        width: 480px;
+        height: 390px;
     }
     #container-informacoes
     {
-        font-size: 22px;
+        font-size: 26px;
         padding-block: 0px;
         padding-bottom: 20px;
+    }
+    .botoes
+    {
+        font-size: 26px;
+        width: 200px;
+        height: 50px;
+    }
+    #pincelada-footer
+    {
+        left: 90px;
     }
 }
 
