--- a/estilos/index.css
+++ b/estilos/index.css
@@ -41,7 +41,7 @@ body
 header
 {
     position: relative;
-    height: 200px;
+    height: 10vh;
 
     display: flex;
     justify-content: center;
@@ -73,12 +73,11 @@ header
 }
 
 /*  TEXTO HEADER  */
-header > p
+#meio > p
 {
-    position: absolute;
-    top: 100px;
     font-family: var(--font1);
-    font-size: 26px;
+    font-size: 28px;
+    z-index: 1;
 }
 
 /*  IMAGEM MAIN   */
@@ -92,12 +91,19 @@ main img
 #container-midia-main
 {
     position: relative;
-    width: 100vw;
-    height: calc(100vh - 600px);
 
     display: flex;
     justify-content: center;
     align-items: center;
+}
+#meio
+{
+    height: 70vh;
+
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
 }
 
 /*  NOME MAIN */
@@ -105,14 +111,14 @@ main img
 {
     position: absolute;  
     font-family: var(--font1);
-    font-size: 34px;
+    font-size: 40px;
 }
 
 /*  INFORMACOES MAIN  */
 #container-informacoes
 {
     text-align: center;
-    padding-block: 20px;
+    padding-block: 22px;
     font-family: var(--font2);
 }
 
@@ -129,7 +135,8 @@ main img
     align-items: center;
     position: relative;
 
-    width: 85px;
+    font-size: 16px;
+    width: 95px;
     height: 35px;
     background-color: var(--cor2);
     border-radius: 8px;
@@ -164,7 +171,7 @@ a
 /*  FOOTER    */
 footer
 {
-    height: 200px;
+    height: 20vh;
 
     display: flex;
     justify-content: space-between;
